> Added a "Teacher" menu and added an option for setting the background to be white on all tabs.
> Added an options menu and added options for selecting Celsius or Kelvin as the temperature units.
# 1.08.04 (57476) Oct 11, 2011
10/11/11 Deploying a version where the "Return Lid" feature is somewhat better behaved.
Modified the Return Lid feature to make put the remaining particles into the gaseous state regardless of their current energy.
# 1.08.03 (57473) Oct 11, 2011
10/11/11 Deploying to dev for interviews and feedback.
Added strokes (black lines) around the atoms/molecules on the control panel to make them more visible.
> Added the ability to return the lid to the container after it has been blown off.
> Added a "hint" to the finger node to make it more obvious that it can be moved.  This hint is only shown when the mouse is over the finger.
Darkened the control panels a little bit so that the recently added molecules would be a bit more visible.
> Added images of the atoms/molecules to the control panel.
> Improved the artwork used for the flame in the stove node.
Added gradient to the slider node of the track.
Modified the stove node to have black labels (more visible).
# 1.08.02 (57327) Oct 5, 2011
10/5/11 Deploying to dev for feedback from the design team.
> Created a new stove node that fixes problems with the old one and looks better.
> Moved the "Reset All" button on the phase changes tab from the control panel to the play area.
> Made the phase diagram be hidden by default in the "Basics" version.
10/5/2011 Removed the option to selected "Adjustable Attraction" in the basic version.
10/5/2011 Removed the interaction potential diagram from the "Basics" version.
> Modified pressure gauge label that said "Pressure Gauge" to instead say "Pressure".
> Modified control panel label that said "Molecules" to instead say "Atoms & Molecules".
> Modified atom colors to be more consistent with other chemistry simulations.